# opencmw-cpp

./: .clang-format  .clang-tidy  .gitignore  .lgtm.yml  .restyled.yaml  .zenodo.json  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.developers.md  README.md  codecov.yml  conanfile.py  lgtm.yml  sonar-project.properties
concepts/buffer/: CMakeLists.txt  QueueBenchmark.cpp  SimpleRingBufferExample.cpp
concepts/client/: CMakeLists.txt  LoadTest_client.cpp  RestSubscription_client.cpp  RestSubscription_example.cpp  dns_example.cpp  helpers.hpp  pre.js
concepts/cmrc/: CMakeLists.txt  main.cpp
concepts/cmrc/assets/: main.css
concepts/cmrc/assets/mustache/: ServicesList.mustache
concepts/core/: BasicThreadPool_example.cpp  CMakeLists.txt  URI_example.cpp  collection_example.cpp
concepts/disruptor/: CMakeLists.txt  QueueBenchmark.cpp  SimpleRingBufferExample.cpp
concepts/majordomo/: CMakeLists.txt  CompatibilityTest.cpp  FilterSubscription_example.cpp  MajordomoRest_LoadTestServer.cpp  MajordomoRest_example.cpp  dns_example.cpp  helpers.hpp
concepts/majordomo/assets/: error.mustache  main.css
concepts/majordomo/assets/mustache/: ServiceNamesList.mustache  ServicesList.mustache  default.mustache
concepts/majordomo/base64pp/: base64pp.cpp  base64pp.h
concepts/majordomo/test/: CMakeLists.txt  base64pp_tests.cpp
concepts/serialiser/: CMakeLists.txt  IoClassSerialiserBenchmark.cpp  IoClassSerialiserBenchmark.hpp  IoSerialiserBenchmark.cpp  IoSerialiserBenchmark.hpp  IoSerialiserJsonBenchmark.cpp  IoSerialiserYaSBenchmark.cpp  JsonExample.cpp  SerialisationExample.cpp  SerialiseToFile.cpp  SimpleReflectionExample.cpp
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/benchmarks/refl-cpp/: CMakeLists.txt  refl-cpp.cpp  refl.hpp
src/buffer/: CMakeLists.txt
src/buffer/include/: AtomicBitset.hpp  Buffer.hpp  BufferSkeleton.hpp  CircularBuffer.hpp  ClaimStrategy.hpp  Sequence.hpp  Transactions.hpp  WaitStrategy.hpp
src/buffer/test/: CMakeLists.txt  atomic_bitset_tests.cpp  buffer_tests.cpp
src/client/: CMakeLists.txt  README.md
src/client/include/: Client.hpp  ClientCommon.hpp  ClientContext.hpp  ClientPublisher.hpp  CmwLightClient.hpp  CmwLightDirectoryLookup.hpp  DirectoryLightClient.hpp  MockServer.hpp  OAuthClient.hpp  RestClient.hpp  RestClientEmscripten.hpp  RestClientNative.hpp  RestDefaultClientCertificates.hpp
src/client/test/: CMakeLists.txt  ClientExample.cpp  ClientPublisher_tests.cpp  CmwClient_tests.cpp  CmwLightTest.cpp  EmscriptenClientTests.cpp  LoadTestExternalServer.cpp  MockServerTest.cpp  OAuthClient_tests.cpp  RestClientOnly_tests.cpp  RestClient_tests.cpp  nghttp2_tests.cpp  pre.js  setup-keycloak.sh
src/client/test/assets/: ca-cert.pem  ca-key.pem  client-cert.pem  client-key.pem  client-req.pem  server-cert.pem  server-key.pem  server-req.pem
src/cmake/: opencmwConfig.cmake.in
src/core/: CMakeLists.txt
src/core/include/: Debug.hpp  Filters.hpp  Formatter.hpp  LoadTest.hpp  MIME.hpp  MdpMessage.hpp  Rbac.hpp  ReaderWriterLock.hpp  SpinWait.hpp  SubscriptionTopic.hpp  ThreadAffinity.hpp  ThreadPool.hpp  TimingCtx.hpp  Topic.hpp  URI.hpp  ZmqMessage.hpp  ZmqPtr.hpp  collection.hpp  opencmw.hpp
src/core/test/: 00_opencmw_basic_tests.cpp  CMakeLists.txt  MIME_tests.cpp  Rbac_tests.cpp  ReaderWriterLock_tests.cpp  SpinWait_tests.cpp  ThreadAffinity_tests.cpp  ThreadPool_tests.cpp  TimingCtx_tests.cpp  URI_tests.cpp  catch_main.cpp  collection_tests.cpp
src/disruptor/: CMakeLists.txt  README.md
src/disruptor/include/: BasicSetting.hpp  Transactions.hpp
src/disruptor/include/disruptor/: AggregateEventHandler.hpp  BasicExecutor.cpp  BasicExecutor.hpp  BatchEventProcessor.hpp  BlockingQueue.hpp  BlockingWaitStrategy.cpp  BlockingWaitStrategy.hpp  BuildConfig.hpp  BusySpinWaitStrategy.cpp  BusySpinWaitStrategy.hpp  CMakeLists.txt  ClaimStrategy.hpp  ClockConfig.hpp  ConsumerRepository.hpp  DataProvider.hpp  Disruptor.hpp  EventHandlerGroup.hpp  EventPoller.hpp  EventProcessorInfo.hpp  EventStore.hpp  (+78 more)
src/disruptor/test/: CMakeLists.txt  Disruptor_tests.cpp  RingBuffer_tests.cpp  Rx_tests.cpp  Sequence_tests.cpp  Setting_tests.cpp  WaitStrategy_tests.cpp  WaitStrategy_tests.hpp  main.cpp
src/dns/: CMakeLists.txt
src/dns/include/: dns.hpp
src/dns/test/: CMakeLists.txt  dns_test.cpp  helpers.hpp
src/majordomo/: CMakeLists.txt
src/majordomo/test/: CMakeLists.txt  Dns_tests.cpp  base64pp_tests.cpp  catch_main.cpp  cryptography_tests.cpp  helpers.hpp  majordomo_benchmark.cpp  majordomo_load_tests.cpp  majordomo_tests.cpp  majordomoworker_rest_tests.cpp  majordomoworker_tests.cpp  queryparameterparser_tests.cpp  queryserialiser_tests.cpp  rbac_tests.cpp  restserver_testapp.cpp  runinthread.hpp  subscriptionmatcher_tests.cpp  testapp.cpp
src/nghttp2/: CMakeLists.txt
src/rest/: CMakeLists.txt
src/serialiser/: CMakeLists.txt
src/serialiser/include/: CMWlightSerialiser.hpp  IoBuffer.hpp  IoClassSerialiser.hpp  IoSerialiser.hpp  IoSerialiserCmwLight.hpp  IoSerialiserJson.hpp  IoSerialiserYAML.hpp  IoSerialiserYaS.hpp  JsonSerialiser.hpp  MultiArray.hpp  MustacheSerialiser.hpp  QuerySerialiser.hpp  YaSerialiser.hpp  fast_float.h  opencmw.hpp
src/serialiser/test/: 00_opencmw_basic_tests.cpp  CMakeLists.txt  IoBuffer_tests.cpp  IoClassSerialiser_tests.cpp  IoSerialiserCmwLight_tests.cpp  IoSerialiserJson_tests.cpp  IoSerialiserYAML_tests.cpp  IoSerialiserYaS_tests.cpp  IoSerialiser_tests.cpp  JsonSerialiser_tests.cpp  MultiArray_tests.cpp  MustacheSerialiser_tests.cpp  Utils_tests.cpp  queryserialiser_tests.cpp
src/services/: CMakeLists.txt  dns.hpp  dns_client.hpp  dns_storage.hpp  dns_types.hpp  services.hpp
src/services/test/: CMakeLists.txt  OAuthClient_tests.cpp  dns_tests.cpp
src/utils/: CMakeLists.txt
src/utils/include/: Debug.hpp  Utils.hpp
src/yaxxzmq/test/: CMakeLists.txt  main.cpp  test.cpp  test_instantiation_of.cpp  test_tuple_for_each.cpp
src/zmq/: CMakeLists.txt
test/: CMakeLists.txt  IoBuffer_tests.cpp  IoClassSerialiser_tests.cpp  IoSerialiser_tests.cpp  MultiArray_tests.cpp
(+127 files in other folders)
