add_executable(SimpleRingBufferExample SimpleRingBufferExample.cpp)
target_link_libraries(SimpleRingBufferExample PRIVATE core disruptor project_options project_warnings)

add_executable(QueueBenchmark QueueBenchmark.cpp)
target_link_libraries(QueueBenchmark PRIVATE core disruptor project_options project_warnings)
