add_executable(SimpleRingBufferExample SimpleRingBufferExample.cpp)
target_link_libraries(SimpleRingBufferExample PRIVATE core disruptor opencmw_project_options opencmw_project_warnings)

add_executable(QueueBenchmark QueueBenchmark.cpp)
target_link_libraries(QueueBenchmark PRIVATE core disruptor opencmw_project_options opencmw_project_warnings)
