add_executable(IoSerialiserBenchmark IoSerialiserBenchmark.cpp IoSerialiserBenchmark.hpp)
target_link_libraries(IoSerialiserBenchmark PRIVATE serialiser opencmw_project_options opencmw_project_warnings)

add_executable(SimpleReflectionExample SimpleReflectionExample.cpp)
target_link_libraries(SimpleReflectionExample PRIVATE serialiser opencmw_project_options opencmw_project_warnings)

add_executable(SerialisationExample SerialisationExample.cpp)
target_link_libraries(SerialisationExample PRIVATE serialiser opencmw_project_options opencmw_project_warnings)

add_executable(JsonExample JsonExample.cpp)
target_link_libraries(JsonExample PRIVATE serialiser opencmw_project_options opencmw_project_warnings)

add_executable(SerialiseToFile SerialiseToFile.cpp)
target_link_libraries(SerialiseToFile PRIVATE serialiser opencmw_project_options opencmw_project_warnings)
